--- a/작업형 제 1유형 예상문제/Outlier(IQR).ipynb
+++ b/작업형 제 1유형 예상문제/Outlier(IQR).ipynb
@@ -348,13 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "70\n",
       "이상치 데이터에서 여성 수 : 70\n"
      ]
     }
@@ -367,6 +368,11 @@
     "\n",
     "    if outdata2['Sex'].iloc[idx] == 'female':\n",
     "        cnt += 1\n",
+    "\n",
+    "'''\n",
+    "sum = sum(outdata2['Sex'] == 'female')\n",
+    "print(sum)\n",
+    "'''\n",
     "\n",
     "print(f'이상치 데이터에서 여성 수 : {cnt}')"
    ]
